app/styles/app.scss
@import "compass/css3";
@import "compass/css3/transform";
@import "compass/css3/transition";
@import "compass/css3/box-shadow";
@import "compass/css3/user-interface";
@import "compass/css3/box-sizing";

@import "config";
@import "selectordie";
@import "menu";
@import "imprint";
@import "compass";
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);

html{
  background-color:$color-main-background;
  font-family: 'Open Sans', Georgia, sans-serif;
  overflow-y: scroll;
}

body{
  line-height:0.8em;
  color:$color-main-text;

  h1{
    font-size:2em;
    line-height:1.5em;
  }

  p{
    font-size:1.0em;
    @include respond-to("small"){
      font-size:1.5em;
    }
    line-height: 1.5em;
    margin: 0;
    color:$color-main-text-light;
  }

  form{
    font-size:24px;
    @include respond-to("small"){
      font-size:42px;
    }
    padding:50px 0 !important;
  }

  .expertModeOn form{
    padding:20px 0 !important;

  }

  .expertModeOn form{
    padding:10px 0;
  }

  .header{
    a{
      display: block;
      margin: 10px auto 0 auto;
      background: inline-image("runverter-logo.svg") no-repeat;
      background-size:cover;
      background-position:left;
      width: 62px;
      height: 50px;
      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
      @include respond-to("small"){
        background-size:contain;
        background-position:center;
        margin: 60px auto 0 auto;
        width: 342px;
        height: 60px;
      }
      &:hover{
        text-decoration: none;
      }
      &:active{
        width: 50px;
        height: 40px;
        margin-top:15px;
        @include transition(0.1s linear);
        @include respond-to("small"){
          margin-top:60px;
          width: 312px;
          height: 60px;
        }
      }
      @include transition(0.1s linear);
    }
    border:1px solid $color-secondary-background;
    background-color:$color-secondary-background;
    height: 60px;
    &.expertModeOn{
      display:none
    }
    @include respond-to("small"){
      height: 180px;
    }
  }

  .intro{
    text-align: center;
    h1{
      font-size: 24px;
      margin-bottom: 15px;
      @include respond-to("small"){
        font-size: 42px;
      }
    }
    background:$color-secondary-background;
    padding:30px 0 40px 0;

    .toolLine{
      margin-bottom: -2px;
    }

    &.expertModeOn{
      text-align: left;
      h1{
        margin-bottom:7px;
        @include respond-to("small"){
          margin-bottom:10px;
        }
      }
      padding:0;
      p, .toolLabel{
        display : none;
      }
    }

  }

  .uk-container-center{
    padding:0 10px;
    @include respond-to("xsmall"){
      padding:0 25px;
    }
  }

  .uk-form input[type="text"], .uk-form input[type="number"], .uk-form input[type="tel"]{
    text-align: center;
    color:$color-form-text;
    border-color:$color-form-border;
    background-color:$color-main-background;
    height:46px;
    @include respond-to("small"){
      height: 84px;
    }
    padding: 0px 0px 6px 0px;
    border-top:none; border-left:none; border-right:none;
    &:focus{
      color:$color-main-text;
      background-color: $color-form-background;
      border-color: $color-form-border-active;
    }
  }

  .digits-1{
    width: 1.0em;
  }

  .digits-2{
    width: 1.6em;
  }

  .digits-3{
    width: 2.2em;
  }

  .digits-4{
    width: 2.7em;
  }

  .digits-5{
    width: 3.3em;
  }

  .digits-6{
    width: 3.9em;
  }

  .digits-7{
    width: 4.5em;
  }

  .toolLine{
    margin-bottom: 30px;
    display: flex;
    align-items: center;
    margin-left:auto;
    margin-right:auto;
    @include respond-to("medium"){
      margin-left: inherit;
      margin-right: inherit;
      margin-bottom: 20px;
    }
  }

  .tools .toolLabel{
    font-size:14px;
    @include respond-to("small"){
      font-size:21px;
    }
    color:$color-main-text-light;
    padding:0 0 4px 0;
    line-height: 20px;
    // separate column
    @include respond-to("medium"){
      line-height: 30px;
      padding:0 10px 0 0;
      text-align: right;
    }
  }

  .expertModeOn{
    .toolLabel{
      display: none;
    }
  }

  .tools.container-pca .toolLine, .expertModeOn.container-pca .toolLine, .expertModeOn.container-sc .toolLine{
    max-width: 280px;
    @include respond-to("small"){
      max-width: 480px;
    }
    @include respond-to("medium"){
      max-width: inherit;
    }
  }

  .expertModeOn.container-pca .toolLine, .expertModeOn.container-sc .toolLine{
    @include respond-to("medium"){
      max-width: 500px;
    }
  }

  .tools.container-pc .toolLine, .tools.container-lc .toolLine, .expertModeOn.container-pc .toolLine, .expertModeOn.container-lc .toolLine, .expertModeOn.container-rp .toolLine{
    max-width: 210px;
    @include respond-to("small"){
      max-width: 355px;
    }
    @include respond-to("medium"){
      max-width: inherit;
    }
  }

  .expertModeOn.container-pc .toolLine, .expertModeOn.container-lc .toolLine, .expertModeOn.container-rp .toolLine{
    @include respond-to("medium"){
      max-width: 400px;
    }
  }
}

